Sculpt mode: multires not saving brush strokes #74542

Closed
opened 2020-03-08 13:03:13 +01:00 by Erick Tukuniata · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-08 02:48, hash: bc2343d5c3
Worked: (optional)

Short description of error
Multires not saving brush strokes made with the latest master

Exact steps for others to reproduce the error

  • Open the .blend on the latest master and sculpt some, save and open it again.

saving_test_1.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 550 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-08 02:48, hash: `bc2343d5c3` Worked: (optional) **Short description of error** Multires not saving brush strokes made with the latest master **Exact steps for others to reproduce the error** - Open the .blend on the latest master and sculpt some, save and open it again. [saving_test_1.blend](https://archive.blender.org/developer/F8395027/saving_test_1.blend)

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Confirmed.
BUT, if you go to the Sculpt menu and click Rebuild BVH, then it will save... Hmm..

Confirmed. **BUT,** if you go to the Sculpt menu and click Rebuild BVH, then it will save... Hmm..

Added subscriber: @devs

Added subscriber: @devs

In #74542#887058, @TheRedWaxPolice wrote:
Confirmed.
BUT, if you go to the Sculpt menu and click Rebuild BVH, then it will save... Hmm..

Thanks for the info, i lost a ton of work with approach. Devs it should not work like this.

> In #74542#887058, @TheRedWaxPolice wrote: > Confirmed. > **BUT,** if you go to the Sculpt menu and click Rebuild BVH, then it will save... Hmm.. Thanks for the info, i lost a ton of work with approach. Devs it should not work like this.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

#74386 (Sculpt Changes with Dyntopo Enabled Don't Save) seems related.

#74386 (Sculpt Changes with Dyntopo Enabled Don't Save) seems related.
Member

This and #74386 seems to have the same roots, yes, bisecting...

This and #74386 seems to have the same roots, yes, bisecting...
Member

Caused by 2d423479bd

Caused by 2d423479bd

Added subscriber: @brecht

Added subscriber: @brecht

The correct test is if (ob->sculpt && !ob->sculpt->cache), since cache being non-null means a stroke is being painted.

The correct test is `if (ob->sculpt && !ob->sculpt->cache)`, since `cache` being non-null means a stroke is being painted.
Member

always unsure about the styleguide, shouldnt it be:

if (ob->sculpt && ob->sculpt->cache == NULL)
always unsure about the styleguide, shouldnt it be: ``` if (ob->sculpt && ob->sculpt->cache == NULL) ```

This issue was referenced by 9e382dd2a3

This issue was referenced by 9e382dd2a3d8569201a3e5c1a8478166c77e9029

It's like this:

if (ob->sculpt != NULL && ob->sculpt->cache == NULL)

I don't know if this is a hard rule, I can't find it in the style guide, but that's what some developers are recommending.

It's like this: ``` if (ob->sculpt != NULL && ob->sculpt->cache == NULL) ``` I don't know if this is a hard rule, I can't find it in the style guide, but that's what some developers are recommending.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2020-03-18 16:43:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74542
No description provided.