Fix T74542, T74386: schulpt changes not saving (dyntopo or mutires)

Caused by rB2d423479bdea.
Correct check for stroke being painted.

thx also to brecht checking.